...
        padding: const EdgeInsets.all(8.0),
        child: Row(
          mainAxisAlignment: MainAxisAlignment.spaceBetween,
          children: [
            FloatingActionButton(
              heroTag: "deleteALl",
              tooltip: "Delete all stops and routes",
              backgroundColor: Colors.red,
              onPressed: () {
                setState(() {
                  MyRouteProvider.myRoute.waypoints.clear();
                  stopObjects.clear();
                  addStop();
...
              child: const Icon(Icons.delete_forever_outlined,
                  color: Colors.black),
            ),
            FloatingActionButton(
              child: const Icon(Icons.add, color: Colors.white),
              backgroundColor: Colors.lightBlue[200],
              tooltip: "Add Stop",
              onPressed: () {
                showDialog(
                    context: context,
                    builder: (BuildContext dialogContext) {
                      return AlertDialog(
                        title: const Text('Add a stop',
...
