...
    }
  }

  @override
  Widget build(BuildContext context) {
    return Container(
      key: const Key('Searchbar'),
      height: 30,
      width: 300,
      decoration: BoxDecoration(
          color: Colors.lightBlue[200],
          borderRadius: BorderRadius.circular(15.0)),
      // child: Padding(
...
